Fix view on mobile

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body{
     .qr-container{
         top:50%;
         left:0%;
-        transform: translate(5%,30%);
+        transform: translate(2%,30%);
         width:400px;
         height:600px;
     }
